# rr-nerf

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  convert_msgpack.py  environment.yml  filter_density.py  render.py  render_envr.py  train_envr.py  train_ngp.py
baseline/: psnr.txt
configs/ngp/: base.toml
lib/: CMakeLists.txt  bind.cu
lib/include/: bounding_box.h  common.h  envr.h  kernel_helpers.h  ngp.h  pybind11_kernel_helpers.h
lib/src/: envr.cc  ngp.cu
scripts/: common.py  simple_psnr.py
src/common/: __init__.py  aabb.py  constant.py  dataset.py
src/model/: __init__.py  envr.py  ngp.py
src/model/encoding/: hash.py  spherical_harmonics.py
src/model/networks/: __init__.py  mlp.py
src/quantization/: __init__.py  lsq.py
